# explgbk

./: .gitmodules  .project  Install.md  LICENSE  README.md  context.py  package.json  pages.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: ruff.yml
dal/: __init__.py  business_object.py  exp_cache.py  explgbk.py  register.html  run_control.py  sql_queries.py  utils.py
dal/imagestores/: __init__.py  gridfs.py  imagestore.py  seaweed.py  tar.py
dal/models/: README.md  __init__.py  cache.py  common.py  elog.py  experiments.py  files.py  instruments.py  kafka.py  projects.py  roles.py  run_tables.py  runs.py  samples.py  shifts.py  site_config.py  workflows.py
explgbk/: __init__.py  app.py  context.py
explgbk/blueprints/: __init__.py  api.py  pages.py
explgbk/dal/: exp_cache.py  explgbk.py  run_control.py  utils.py
explgbk/dal/imagestores/: gridfs.py  seaweed.py  tar.py
explgbk2/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.mongo.yml  compose.override.yml  compose.yml  deployment.md  development.md  pyproject.toml  release-notes.md
explgbk2/.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
explgbk2/.github/workflows/: test-backend.yml
explgbk2/backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
explgbk2/backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py
explgbk2/backend/app/api/: deps.py  main.py
explgbk2/backend/app/api/routes/: experiments.py  instruments.py  items.py  login.py  private.py  users.py
explgbk2/backend/app/core/: config.py  db.py  security.py  sql_db.py
explgbk2/backend/app/models/: cache.py  common.py  elog_plus.py  experiment.py  item.py  user.py
explgbk2/backend/app/models/v1/: __init__.py  base.py  debezium.py  experiment.py  site.py
explgbk2/backend/app/models/v2/: base.py  db.py  entries.py  schemas.py
explgbk2/backend/app/streaming/: cdc.py
explgbk2/backend/libs/pief-auth/: pyproject.toml
explgbk2/backend/libs/pief-auth/fga/: proposed.fga.yaml  schema.fga.yaml
explgbk2/backend/libs/pief-auth/src/pief/auth/: __init__.py  client.py  coact.py  deps.py  logbook.py
explgbk2/backend/libs/pief-auth/tests/: test_client.py
explgbk2/backend/libs/pief-logdb/: alembic.ini  pyproject.toml
explgbk2/backend/libs/pief-logdb/artifacts/: db.dbml  db.sql
explgbk2/backend/libs/pief-logdb/scripts/: gen_ddl.py  gen_migration.py
explgbk2/backend/libs/pief-logdb/scripts/dbml/: package-lock.json  package.json  sql_to_dbml.ts  tsconfig.json
explgbk2/backend/libs/pief-logdb/src/pief/logdb/: __init__.py  crud.py  engine.py  schemas.py  tables.py
explgbk2/backend/libs/pief-logdb/src/pief/logdb/alembic/: env.py  script.py.mako
explgbk2/backend/libs/pief-logdb/src/pief/logdb/alembic/versions/: .gitkeep  21f8ebc61843_init.py  8c5d1adacbd7_init.py
explgbk2/backend/libs/pief-logdb/src/pief/logdb/config/: __init__.py  alembic.py  settings.py
explgbk2/backend/libs/pief-logdb/tests/: conftest.py  helpers.py  test_entries.py  test_experiments.py  test_logbook_revision.py  test_migrations.py  test_shells.py  test_tags.py  test_users.py
explgbk2/backend/libs/pief-models/: pyproject.toml
explgbk2/backend/libs/pief-models/src/pief/models/: __init__.py
explgbk2/backend/libs/pief-models/src/pief/models/legacy/: __init__.py  base.py  debezium.py  experiment.py  site.py
explgbk2/backend/libs/pief-models/src/pief/models/v1/: __init__.py
explgbk2/backend/scripts/: lint.sh  prestart.sh
explgbk2/backend/services/pief-api/: pyproject.toml
explgbk2/backend/services/pief-api/src/pief/api/: __init__.py  backend_pre_start.py  initial_data.py  main.py
explgbk2/backend/services/pief-api/src/pief/api/core/: __init__.py  config.py  security.py
explgbk2/backend/services/pief-api/src/pief/api/models/: __init__.py  cache.py  common.py  entry.py  experiment.py  logbook.py  tag.py  user.py
explgbk2/backend/services/pief-api/src/pief/api/routes/: deps.py  entries.py  experiments.py  instruments.py  logbooks.py  main.py  tags.py  users.py
explgbk2/backend/services/pief-api/tests/: conftest.py
explgbk2/backend/services/pief-api/tests/routes/: test_experiments.py  test_users.py
explgbk2/backend/services/pief-streams/: Dockerfile  pyproject.toml
explgbk2/backend/services/pief-streams/src/pief/streams/: __init__.py  cdc.py  config.py
explgbk2/backend/services/pief-streams/tests/: test_cdc_model_validation.py
explgbk2/backend/tests/: conftest.py
explgbk2/backend/tests/api/routes/: test_experiments.py  test_items.py  test_login.py  test_private.py  test_users.py
explgbk2/backend/tests/crud/: test_user.py
explgbk2/backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
explgbk2/backend/tests/sql/: conftest.py  helpers.py  test_entries.py  test_experiments.py  test_logbook_revision.py  test_shells.py  test_tags.py  test_users.py
explgbk2/backend/tests/streaming/: test_cdc_model_validation.py
explgbk2/backend/tests/utils/: experiment.py  item.py  user.py  utils.py
explgbk2/config/debezium/: mongodb-connector.json
explgbk2/frontend/: README.md  index.html  openapi-ts.config.ts  package.json
explgbk2/scripts/: generate-client.sh  mongo-init.sh  mongo-shard-init.sh
runscripts/: backup.py  rundev.sh
runscripts/migration/: 0001.mongo  0003.mongo  0007.mongo  0008.mongo
scripts/: rundev.sh
scripts/migration/: 0001.mongo  0002.mongo  0004.mongo  0005.mongo  0006.mongo
services/: business_service.py  explgbk.py
static/: elog.css  elog.js  experiment_switch.js  experiments.css  experiments.js  lgbk.css  lgbk.css.map  lgbk.js  lgbk.less  lgbk.scss  register_new_experiment.js  spgntr.js
static/css/: lgbk.css  lgbk.scss
static/js/: experiments.js  fachkbx.js  lgbk.js  spgntr.js
static/json/: fapaths.json  feedback_LCLS.json  sitespecific_ops_tabs_LCLS.json  sitespecific_tabs_LCLS.json
templates/: elog.html  elog_entry.html  experiment_switch.html  experiments.html  help.html  lgbk.html  logout.html  ops.html  project.html  projects.html  register_new_experiment.html
(+188 files in other folders)
