[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0.0",
    "tenacity>=9.0.0,<9.2.0",
    "pydantic>2.0",
    "httpx>=0.25.1,<1.0.0",
    "beanie>=2.0.0,<2.1.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pymongo>=4.16.0",
    "faststream[kafka]>=0.6.7,<0.7.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.18.0,<1.0.0",
    "ruff>=0.2.2,<1.0.0",
    "prek>=0.2.24,<1.0.0",
    "coverage>=7.4.3,<8.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "testcontainers[mongodb]>=4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
project-includes = ["app/**/*.py"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
