[project]
name = "pief-auth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openfga-sdk>=0.9",
    "pydantic-settings>=2.0",
    "fastapi>=0.114.2",
]

[build-system]
requires = ["uv_build>=0.11.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pief.auth"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15",
]
