[project]
name = "pief-models"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>2.0",
]

[build-system]
requires = ["uv_build>=0.11.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pief.models"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
