[project]
name = "pief-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "tenacity>=9.0.0,<9.2.0",
    "pydantic>2.0",
    "httpx>=0.25.1,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pief-models",
    "pief-logdb",
]

[build-system]
requires = ["uv_build>=0.11.3"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.uv.sources]
pief-models = { workspace = true }
pief-logdb = { workspace = true }

[tool.uv.build-backend]
module-name = "pief.api"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
