[project]
name = "pief-streams"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faststream[kafka]>=0.6.7,<0.7.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "pief-models",
    "pief-logdb",
]

[build-system]
requires = ["uv_build>=0.11.3"]
build-backend = "uv_build"

[tool.uv.sources]
pief-models = { workspace = true }
pief-logdb = { workspace = true }

[tool.uv.build-backend]
module-name = "pief.streams"

[tool.pytest]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Kafka/Debezium/MongoDB stack",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
